--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-pdf-extract = "0.7"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-csv = "1.2"
+serde = { version = "1.0.217", features = ["derive"] }
+actix-web = "4"
+futures-util = "0.3.31"
+actix-multipart = "0.7.2"
+pdf-extract = "0.8.0"
