--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.217", features = ["derive"] }
+extractous = "0.3.0"
 actix-web = "4"
 futures-util = "0.3.31"
 actix-multipart = "0.7.2"
-pdf-extract = "0.8.0"
+serde_json = "1.0.135"
+bincode = "1.3.3"
